# plurx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  plurx.example.toml  rust-toolchain.toml
.github/workflows/: ci.yml
clients/android/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/tv/plurx/app/: MainActivity.kt  PlurxApp.kt
clients/android/app/src/main/java/tv/plurx/app/data/: Caps.kt  Models.kt  Net.kt  PlurxApi.kt  Session.kt  SettingsStore.kt
clients/android/app/src/main/java/tv/plurx/app/player/: Controller.kt  PlayerScreen.kt
clients/android/app/src/main/java/tv/plurx/app/ui/: AppViewModel.kt  AuthScreens.kt  DetailScreen.kt  HomeScreen.kt  LibraryScreen.kt  SettingsScreen.kt
clients/android/app/src/main/java/tv/plurx/app/ui/components/: Common.kt
clients/android/app/src/main/java/tv/plurx/app/ui/theme/: Theme.kt
clients/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
clients/android/gradle/: libs.versions.toml
clients/apple/: .gitignore  README.md  project.yml
clients/apple/Sources/: AppModel.swift  AuthImage.swift  AuthViews.swift  Caps.swift  Components.swift  DetailView.swift  HomeView.swift  LibraryView.swift  Models.swift  PlayerController.swift  PlayerView.swift  PlurxAPI.swift  PlurxApp.swift  Session.swift  SettingsStore.swift  SettingsView.swift  Theme.swift
crates/plurx-compat-plex/: Cargo.toml
crates/plurx-compat-plex/src/: gdm.rs  lib.rs  map.rs  xml.rs
crates/plurx-core/: Cargo.toml
crates/plurx-core/src/: auth.rs  config.rs  domain.rs  error.rs  lib.rs  tracks.rs  trakt.rs
crates/plurx-core/src/metadata/: anilist.rs  mod.rs  tmdb.rs
crates/plurx-core/src/playback/: mod.rs  profiles.toml
crates/plurx-core/src/scan/: mod.rs  parse.rs  probe.rs
crates/plurx-core/src/store/: mod.rs  sqlite.rs
crates/plurx-core/src/store/sqlite/: library.rs  media.rs  mod.rs  trakt.rs  users.rs  watch.rs
crates/plurx-core/src/transcode/: encoder.rs  mod.rs
crates/plurxd/: Cargo.toml
crates/plurxd/src/: http.rs  logbuf.rs  main.rs  state.rs  trakt.rs  transcode.rs
crates/plurxd/src/http/: auth.rs  browse.rs  dto.rs  error.rs  extract.rs  hls.rs  images.rs  libraries.rs  mod.rs  plex.rs  stream.rs  system.rs  trakt.rs  users.rs  watch.rs  web.rs
crates/plurxd/src/web/: index.html  manifest.webmanifest
deploy/: .env.example  README.md  com.plurx.plurxd.plist  docker-compose.override.example.yml  docker-compose.yml  plurxd.service  unraid-plurx.xml
docs/: ADAPTIVE-QUALITY.md  ARCHITECTURE.md  CHEATSHEET.md  CLIENTS.md  FEATURES.md  OPERATIONS.md  PHASE3-SPIKE.md  PLAYBACK.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md
scripts/: pre-commit
