[workspace]
resolver = "2"
members = [
    "crates/plurx-core",
    "crates/plurx-compat-plex",
    "crates/plurxd",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
publish = false
repository = "https://github.com/pjunod/plurx"

[workspace.dependencies]
# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync", "process", "io-util", "fs"] }
async-trait = "0.1"
# Storage (single-node backend behind the Store trait; raft backend lands in Phase 4)
rusqlite = { version = "0.37", features = ["bundled"] }
# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Scanner / metadata
walkdir = "2"
notify = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Auth
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
# Streaming
bytes = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
# Misc
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
# Dev
tempfile = "3"
http-body-util = "0.1"

[workspace.lints.clippy]
unwrap_used = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
