[package]
name = "plurx-core"
description = "plurx core: storage boundary, configuration, shared domain types"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Scanner
walkdir = { workspace = true }
regex = { workspace = true }
# Metadata
reqwest = { workspace = true }
# Auth
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
