[package]
name = "plurxd"
description = "plurx media server daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
plurx-core = { path = "../plurx-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }

[lints]
workspace = true
