[package]
name = "plurxd"
description = "plurx media server daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
plurx-core = { path = "../plurx-core" }
plurx-compat-plex = { path = "../plurx-compat-plex" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "fs", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
mime_guess = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
